--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,100 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <android.support.v7.widget.GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:columnCount="2"
+        app:rowCount="4">
 
+        <Button
+            android:id="@+id/hello"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hello"
+            app:layout_column="0"
+            app:layout_columnWeight="1"
+            app:layout_gravity="fill_vertical"
+            app:layout_row="0"
+            app:layout_rowWeight="1"
+            android:onClick="buttonTapped"/>
+
+        <Button
+            android:id="@+id/howareyou"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="How are you?"
+            app:layout_column="1"
+            app:layout_columnWeight="1"
+            app:layout_gravity="fill_vertical"
+            app:layout_row="0"
+            app:layout_rowWeight="1"
+            android:onClick="buttonTapped"/>
+        <Button
+            android:id="@+id/goodevening"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_column="0"
+            app:layout_row="1"
+            app:layout_gravity="fill_vertical"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            android:text="Good evening"
+            android:onClick="buttonTapped"/>
+        <Button
+            android:id="@+id/please"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_column="1"
+            app:layout_row="1"
+            app:layout_gravity="fill_vertical"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            android:text="Please"
+            android:onClick="buttonTapped"/>
+        <Button
+            android:id="@+id/mynameis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_column="0"
+            app:layout_row="2"
+            app:layout_gravity="fill_vertical"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            android:text="My name is..."
+            android:onClick="buttonTapped"/>
+        <Button
+            android:id="@+id/doyouspeakenglish"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_column="1"
+            app:layout_row="2"
+            app:layout_gravity="fill_vertical"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            android:text="Do you &#10;speak english?"
+            android:onClick="buttonTapped"/>
+        <Button
+            android:id="@+id/welcome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_column="0"
+            app:layout_row="3"
+            app:layout_gravity="fill_vertical"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            android:text="welcome"
+            android:onClick="buttonTapped"/>
+        <Button
+            android:id="@+id/ilivein"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_column="1"
+            app:layout_row="3"
+            app:layout_gravity="fill_vertical"
+            app:layout_columnWeight="1"
+            app:layout_rowWeight="1"
+            android:text="I live in..."
+            android:onClick="buttonTapped"/>
+    </android.support.v7.widget.GridLayout>
 </android.support.constraint.ConstraintLayout>
